fix layout shift when modal is opened, im gmail account is test user, show only regular components instead of mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,11 @@ body {
   scrollbar-width: thin;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--bg-primary) transparent;
+}
+
 .menu-animation {
   animation: rotateAnimation 300ms ease-in-out forwards;
   animation-delay: calc(var(--i) * 20ms);
